[gd_scene load_steps=14 format=3 uid="uid://djkdve5xpg3ws"]

[ext_resource type="Script" path="res://Scripts/ui.gd" id="1_3s2jn"]
[ext_resource type="Texture2D" uid="uid://b3m0fp0hsm5ck" path="res://Assets/dices/dice.png" id="2_c82q5"]
[ext_resource type="Texture2D" uid="uid://b7s31bjn3cqtb" path="res://Assets/monster_bg.png" id="2_evm16"]
[ext_resource type="PackedScene" uid="uid://co3xtuknwdebj" path="res://Scenes/input_scene.tscn" id="2_shqe5"]
[ext_resource type="Texture2D" uid="uid://grddbw46okux" path="res://Assets/moneys/red_money.png" id="3_31g6k"]
[ext_resource type="Texture2D" uid="uid://dkandjbm6faj8" path="res://Assets/dices/dice_1.png" id="4_bd26c"]
[ext_resource type="Texture2D" uid="uid://lwriri4vnwwf" path="res://Assets/moneys/blue_money.png" id="4_jjtlt"]
[ext_resource type="Texture2D" uid="uid://ha6xtr4r02vf" path="res://Assets/moneys/green_money.png" id="7_tbxls"]
[ext_resource type="Texture2D" uid="uid://78ola3o5m07w" path="res://Assets/dices/dice_4.png" id="8_g1rgd"]

[sub_resource type="Animation" id="Animation_p1mol"]
resource_name = "slide"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control/m_con:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.12, 1),
"update": 0,
"values": [Vector2(0.5, 0.5), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Control/p_con:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.12, 1),
"update": 0,
"values": [Vector2(0.5, 0.5), Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Control/m_con/m_t:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.12, 1),
"update": 0,
"values": [-6.28319, 6.28319]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Control/p_con/p_t:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.12, 1),
"update": 0,
"values": [-6.28319, 6.28319]
}

[sub_resource type="Animation" id="Animation_bjr7q"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control/m_con:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Control/p_con:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Control/m_con/m_t:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Control/p_con/p_t:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Control/outcome_t:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Control/outcome_t:rotation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_8mfsu"]
resource_name = "outcome"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control/outcome_t:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8),
"transitions": PackedFloat32Array(0.12, 2, 0.12, 2, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(2, 2), Vector2(1, 1), Vector2(0.5, 0.5), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Control/outcome_t:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(0.15),
"update": 0,
"values": [0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_f34m3"]
_data = {
"RESET": SubResource("Animation_bjr7q"),
"outcome": SubResource("Animation_8mfsu"),
"slide": SubResource("Animation_p1mol")
}

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_3s2jn")

[node name="bg" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("2_evm16")
expand_mode = 1

[node name="dice" type="TextureRect" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -39.0
offset_top = -159.0
offset_right = 36.0
offset_bottom = -84.0
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("2_c82q5")
expand_mode = 1
metadata/_edit_use_anchors_ = true

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HeadCenter" type="HBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.0416667
anchor_right = 0.5
anchor_bottom = 0.0416667
offset_left = -101.0
offset_right = 101.0
offset_bottom = 72.0
grow_horizontal = 2
metadata/_edit_use_anchors_ = true

[node name="mon_g_t" type="TextureRect" parent="Control/HeadCenter"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("4_bd26c")
expand_mode = 2

[node name="Label" type="Label" parent="Control/HeadCenter"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = ":"
horizontal_alignment = 1

[node name="player_g_t" type="TextureRect" parent="Control/HeadCenter"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("4_bd26c")
expand_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Control"]
layout_mode = 1
offset_left = 50.0
offset_top = 25.0
offset_right = 217.0
offset_bottom = 125.0
theme_override_constants/separation = -10

[node name="TextureRect" type="TextureRect" parent="Control/HBoxContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
texture = ExtResource("3_31g6k")
expand_mode = 1

[node name="m_money" type="Label" parent="Control/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.996094, 0.261719, 0.261719, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.588235)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_font_sizes/font_size = 36
text = "200"
vertical_alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -217.0
offset_top = 25.0
offset_right = -50.0
offset_bottom = 125.0
grow_horizontal = 0
theme_override_constants/separation = -10

[node name="TextureRect" type="TextureRect" parent="Control/HBoxContainer2"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
texture = ExtResource("4_jjtlt")
expand_mode = 1

[node name="p_money" type="Label" parent="Control/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.480469, 0.773438, 0.996094, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.588235)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_font_sizes/font_size = 36
text = "200"

[node name="MarginContainer" type="MarginContainer" parent="Control"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 32

[node name="HBoxContainer" type="HBoxContainer" parent="Control/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="start_btn" type="Button" parent="Control/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
modulate = Color(1, 1, 0, 1)
layout_mode = 2
size_flags_vertical = 4
theme_override_font_sizes/font_size = 46
text = "Bet"

[node name="InputNode" parent="Control" instance=ExtResource("2_shqe5")]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -388.0
offset_top = -261.0
offset_right = 388.0
offset_bottom = 261.0

[node name="outcome_t" type="TextureRect" parent="Control"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -62.5
offset_top = -62.5
offset_right = 62.5
offset_bottom = 62.5
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(62, 62)
texture = ExtResource("8_g1rgd")
expand_mode = 1

[node name="outcome_l" type="Label" parent="Control"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -196.5
offset_top = -64.5
offset_right = 196.5
offset_bottom = 64.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.87451, 0.658824, 0, 1)
theme_override_colors/font_shadow_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 42
text = "outcome"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="p_con" type="Control" parent="Control"]
layout_mode = 1
anchor_left = 0.565
anchor_top = 0.833335
anchor_right = 0.565
anchor_bottom = 0.833335
offset_left = -20.0
offset_top = -40.001
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0
rotation = 6.28319
metadata/_edit_use_anchors_ = true

[node name="p_t" type="TextureRect" parent="Control/p_con"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
offset_right = 100.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(48.9909, 46.3779)
texture = ExtResource("7_tbxls")
expand_mode = 1

[node name="p_bet_l" type="Label" parent="Control/p_con"]
unique_name_in_owner = true
modulate = Color(0.542969, 0.996094, 0.585938, 1)
layout_mode = 2
offset_right = 100.0
offset_bottom = 39.0
theme_override_colors/font_color = Color(0.542969, 0.996094, 0.585938, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 0.588235)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 26
text = "100"

[node name="m_con" type="Control" parent="Control"]
layout_direction = 1
layout_mode = 1
anchor_left = 0.39
anchor_top = 0.823335
anchor_right = 0.39
anchor_bottom = 0.823335
offset_left = -20.0005
offset_top = -40.001
offset_right = 20.0005
grow_horizontal = 2
grow_vertical = 0
rotation = 6.28319
metadata/_edit_use_anchors_ = true

[node name="m_t" type="TextureRect" parent="Control/m_con"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
offset_right = 100.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(49.2172, 43.9023)
texture = ExtResource("7_tbxls")
expand_mode = 1

[node name="m_bet_l" type="Label" parent="Control/m_con"]
unique_name_in_owner = true
modulate = Color(0.542969, 0.996094, 0.585938, 1)
layout_mode = 0
offset_right = 45.0
offset_bottom = 39.0
theme_override_colors/font_color = Color(0.289063, 0.96875, 0.339844, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 0.588235)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 26
text = "100"

[node name="ShowOutcome" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="Notifly" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="DiceRolling" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="animPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_f34m3")
}

[connection signal="pressed" from="Control/MarginContainer/HBoxContainer/start_btn" to="." method="_on_start_btn_pressed"]
[connection signal="timeout" from="ShowOutcome" to="." method="_on_show_outcome_timeout"]
[connection signal="timeout" from="Notifly" to="." method="_on_notifly_timeout"]
[connection signal="timeout" from="DiceRolling" to="." method="_on_dice_rolling_timeout"]
